DevOps/v1-EC2.tf
# provider "aws" {
# region  = "us-east-1"
# }

# resource "aws_instance" "first-server" {
#   ami           = "ami-08a0d1e16fc3f61ea"
#   instance_type = "t2.micro"
#   key_name     = "VirginaKet25"
#  }
